MVP just need to fix the div gap and as well add some more styling and tweaking

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 button {
-  background-color: lightblue;
-  size: 12px;
+  display: none;
+  font-style: bold;
+  background-color: rgb(3, 83, 46);
+  height: 40px;
+  width: 100px;
 }
 
 background {
@@ -8,24 +11,41 @@ background {
 }
 
 .back-of-card {
+  position: relative;
   padding-left: 20px;
   padding-bottom: 10px;
-  width: 225px;
-  height: 300px;
+  width: 250px;
+  height: 345px;
+}
+
+/* .deck-container {
+ 
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 150px 1fr;
+} */
+
+.one-card:hover .add-to-deck {
+  display: inline-block;
+  position: relative;
+  bottom: 200px;
+  right: -28px;
+}
+
+.one-card:hover .delete-card {
+  display: inline-block;
+  position: relative;
+  bottom: 100px;
+  right: 70px;
 }
 
 .one-card {
   padding: 20px;
 }
+
 .all-cards {
   display: flex;
   flex-wrap: wrap;
-}
-
-.deck-container {
-  display: block;
-  position: relative;
-  bottom: 0;
 }
 
 h1 {
@@ -43,6 +63,7 @@ body {
 }
 
 .zoom {
+  grid-area: innder-divs;
   transition: transform 0.2s;
 }
 
